add movie search project

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <h4>Work</h4>
 </div>
 <div class="grid-container">
-    <div class="grid-item grid-item-1"><a href="#"><img src="./assest/images/surf.jpg" alt="surf"/></a><h6>Surf Report </br><span>MERN/Stack</span></h6> </div>
+    <div class="grid-item grid-item-1"><a href="https://ayoubhm1993.github.io/Movie-Search"><img src="./assest/images/movieSearch.jpg" alt="movie"/></a><h6>Movie Search </br><span>Js/Jquery/Bulma</span></h6> </div>
     <div class="grid-item grid-item-2"><a href="#"><img src="./assest/images/ledwall.JPG" alt="led-wall"/></a><h7>LED Wall </br><span>Node/lot</span></h7></div>
     <div class="grid-item grid-item-3"><a href="#"><img src="./assest/images/calculator.jpg" alt="calculator"/></a><h8>Calculator </br><span>React/js/css</span></h8></div>
     <div class="grid-item grid-item-4"><a href="#"><img src="./assest/images/puzzle.jpg" alt="puzzle"/></a><h9>Pastel Puzzels </br><span>React/js/css</span></h9></div>
@@ -57,7 +57,7 @@
 
 </div>
 </section>
-<section  id="Contact-me" class="contact">
+<section  id="Contact-me"  class="contact">
 <h5>Contact</br> Me</h5>
 <div class="social">
   <a href="#">+1 (512) 758 2527</a>
