--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="assest/css/style.css"/>
-    <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
  <title>AYOUB HAMMOUCH</title>
 </head>
 <body>
@@ -12,64 +13,36 @@
     <h1>AYOUB HAMMOUCH</h1>
 </div>
 
-<div class="nav">
+<div class=" nav navbar navbar-light" style="background-color: #e3f2fd; ">
     <ul>  
-       <li><a href="#About-me">About Me</a></li>
-       <li><a href="#Work">Work</a></li>
-       <li><a href="#Contact-me">Contact Me</a></li>
+       <li ><a onclick="aboutMe()">About Me</a></li>
+       <li><a onclick="work()">Work</a></li>
+       <li><a  onclick="contactMe()" >Contact Me</a></li>
        <li><a href="#">Resume</a></li>
    </ul>
 </div>
 </div>
 </header>
 
-<section  class="hero">
-  <div class="picture">
-    <img src="./assest/images/me.JPG" alt="ayoub-hammouch"/>
-    "
-  </div>
-    <h2>Ayoub Hammouch</h2>
+<div class="hero">
+  <div class='container'>
+ <!-- <div class="picture">-->
+  <!--  <img src="./assest/images/me.JPG" alt="ayoub-hammouch"/>-->
+  <img src='./assest/icones/Qutation-marks.png' />
+ </br>
+  <p>Junior Web Developer</p>
+
+  <div id='btn-container'>
+  <button type="button"  class="btn btn-outline-success btn-lg" onclick="aboutMe()">Who I Am</button>
+  <button type="button" id='work' class="btn btn-outline-success btn-lg" onclick="work();" >Work projects</button>
+  <button type="button" id="contact" class="btn btn-outline-success btn-lg"onclick="contactMe()">Contact Me</button>
+</div>
+  <!--</div>-->
     
-</section>
-
-<section id="About-me" class="about" >
-  <div>
-        <h3>About Me</h3>
-  </div>
-  <p>
-  Writing about yourself is a bit awkward, the hardest part is figuring out how to start - but I'll give it shot.</br> Professionally, my career in coding is only beginning but I am incredibly excited about this field. </br> The possibities of code seem endless and I've found it difficult to put the assignments down because each one presents a new engaging puzzle.</br>
-
-  My primary goal is to continue learning all that I can about coding, as this field is so vast and has no shortages of new things to learn.</br> My plan is to use coding to pursue a career in bioinformatics. However, I'm leaving my options open moving forward from this class because there are so many avenues left to explore.
-
-</p>
-
-</section>
-<section id="Work" class="work-cont">
- <div>
-  <h4>Work</h4>
 </div>
-<div class="grid-container">
-    <div class="grid-item grid-item-1"><a href="https://ayoubhm1993.github.io/Movie-Search"><img src="./assest/images/movieSearch.jpg" alt="movie"/></a><h6>Movie Search </br><span>Js/Jquery/Bulma</span></h6> </div>
-    <div class="grid-item grid-item-2"><a href="#"><img src="./assest/images/ledwall.JPG" alt="led-wall"/></a><h7>LED Wall </br><span>Node/lot</span></h7></div>
-    <div class="grid-item grid-item-3"><a href="#"><img src="./assest/images/calculator.jpg" alt="calculator"/></a><h8>Calculator </br><span>React/js/css</span></h8></div>
-    <div class="grid-item grid-item-4"><a href="#"><img src="./assest/images/puzzle.jpg" alt="puzzle"/></a><h9>Pastel Puzzels </br><span>React/js/css</span></h9></div>
-    <div class="grid-item grid-item-5"><a href="https://ayoubhm1993.github.io/Run-Buddy/"><img src="./assest/images/run-buddy.jpg" alt="run-buddy"/></a><h10>Run Buddy </br><span>Html/css</span></h10></div>
-
-</div>
-</section>
-<section  id="Contact-me"  class="contact">
-<h5>Contact</br> Me</h5>
-<div class="social">
-  <a href="#">+1 (512) 758 2527</a>
-   <a href="#">Ayoubhm1993@gmail.com</a>
-  <a href="https://github.com/Ayoubhm1993">Github</a>
-  <a href="https://www.linkedin.com/in/ayoub-hammouch-aa9a701b6/">Linkedin</a>
-  
 </div>
 
 
-
-</section>
-
+<script src="./assest/js/script.js"></script>
 </body>
-</html
+</html>
